# MeshHexer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  annotated.html  annotated_dup.js  classMeshHexer_1_1Result-members.html  classMeshHexer_1_1Result.html  classMeshHexer_1_1Result.js  classMeshHexer_1_1Result_3_01void_00_01E_01_4-members.html  classMeshHexer_1_1Result_3_01void_00_01E_01_4.html  classMeshHexer_1_1Result_3_01void_00_01E_01_4.js  classMeshHexer_1_1SurfaceMesh-members.html  classMeshHexer_1_1SurfaceMesh.html  classMeshHexer_1_1SurfaceMesh.js  classMeshHexer_1_1VolumeMesh-members.html  classMeshHexer_1_1VolumeMesh.html  classMeshHexer_1_1VolumeMesh.js  classes.html  dir_44e394118fb530eae39e7d6b4f5bfdce.html  dir_44e394118fb530eae39e7d6b4f5bfdce.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hexmesher_config.hpp.in  hexmesherv2-config.cmake  index.html  menudata.js  meshhexer-config.cmake  meshhexer_8hpp_source.html  meshhexer_config.hpp.in  navtreedata.js  (+29 more)
.github/: doxyfile
.github/workflows/: main.yml
applications/: CMakeLists.txt  dbg_min_gap.cpp  hexmesher.cpp
applications/hexmesher-cli/: CMakeLists.txt  hexmesher-cli.cpp  timing.hpp
applications/meshhexer-cli/: CMakeLists.txt  meshhexer-cli.cpp
cmake/: FindPackageOverrideHelper.cmake  GetTPL.cmake  Thirdparty.cmake  cgal-extra.cmake  pmp-extra.cmake
include/: CMakeLists.txt
include/meshhexer/: meshhexer.hpp  types.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_9.js  functions_0.js  functions_1.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+18 more)
src/: CMakeLists.txt  cgal_types.hpp  hexmesher.cpp  hexmesher.hpp  io-test.cpp  io.cpp  io.hpp  macros.hpp  meshhexer.cpp  meshhexer.hpp  meshing.cpp  meshing.hpp  properties-test.cpp  properties.cpp  properties.hpp  types.hpp  util.hpp  warnings.hpp
